k8s/tmp/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: wanderlust
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        imagePullPolicy: IfNotPresent
        image: frontend-image
        ports:
        - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: wanderlust
spec:
  type: NodePort
  ports:
  - port: 5173
    targetPort: 5173
    nodePort: 30007
  selector:
    app: frontend
